首页移动端适配开发

--- a/index.html
+++ b/index.html
@@ -14,14 +14,26 @@
       <div class="header-left">
         <img class="header-left-logo" src="./images/header-logo.png"/>
         <ul class="header-nav clearfix">
-          <li><a  class="a-active"  href="/index.html">首页</a></li>
-          <li><a  href="./price.html">价格</a></li>
+          <li><a class="a-active"  href="/index.html">首页</a></li>
+          <li><a href="./price.html">价格</a></li>
         </ul>
       </div>
       <span class="header-download">下载客户端</span>
      </div>
   </div>
   <!-- 头部导航结束 -->
+
+  <!-- 手机端头部导航开始 -->
+  <div class="mobile-header">
+    <div class="mobile-header-left">
+      <img class="" src="./images/header-logo.png"/>
+    </div>
+    <div class="mobile-header-right">
+      <div class="mobile-header-download">下载客户端</div>
+      <span class="mobile-more-menu">更多</span>
+    </div>
+  </div>
+  <!-- 手机端头部导航结束 -->
 
    <!-- 第一屏banner开始 --> 
    <div class="banner-wrap">
@@ -49,13 +61,41 @@
    </div>
    <!-- 第一屏banner结束 -->
 
+   <!-- 手机端第一屏banner开始 -->
+   <div class="mobile-banner-wrap">
+    <div class="mobile-banner-title">游戏云电脑，登录即玩！</div>
+    <div class="common-line2">
+      <span class="common-line2-price">低至0.2元</span>
+      <span class="common-line2-game">/千款游戏/开机即玩/顺畅不卡顿</span>
+    </div>
+    <div class="banner-line3">
+      <div class="banner-pc-download">
+        <div class="download-windows">Windows版下载</div>
+        <div class="download-mac">苹果mac版下载</div>
+      </div>
+      <div class="banner-mobile-download">
+        <img src=""/>
+        <div>移动端</div>
+      </div>
+    </div>
+   </div>
+   <!-- 手机端第一屏banner结束 -->
+
    <!-- 中间分隔开始 -->
-  <div class="module-divider-common">
+  <div class="module-divider-common1">
     <span class="divider-content1">
       1000+热门游戏，登录即玩 
     </span>
   </div> 
   <!-- 中间分隔结束 -->
+
+   <!-- 手机端中间分隔开始 -->
+  <div class="mobile-module-divider-common">
+    <span class="mobile-divider-content1">
+      下载客户端，查看更多游戏
+    </span>
+  </div> 
+  <!-- 手机端中间分隔结束 -->
 
   <!-- 查看更多游戏开始 -->
   <div class="more-game-wrap">
@@ -76,9 +116,18 @@
     </div>
   </div>
   <!-- 查看更多游戏结束 -->
+
+  <!-- 手机端查看更多游戏开始 -->
+  <div class="mobile-game-wrap"> 
+    <div class="mobile-game-img">
+      查看更多区域图片滚动....
+    </div>
+    <div class="mobile-more-game">查看更多游戏</div>
+  </div>
+  <!-- 手机端查看更多游戏结束 -->
  
   <!-- 分隔开始 -->
-  <div class="module-divider-common">
+  <div class="module-divider-common2 mobile-module-divider-common">
     <span class="divider-content2">
       价格实惠，种类多 
     </span>
@@ -128,10 +177,52 @@
         <div class="price-count">¥750</div>
         <div class="price-buy">立即抢购</div>
       </div>
-
     </div>
   </div>
    <!-- 首页价格结束 --> 
+   
+  <!-- 手机端价格开始 --> 
+  <div class="mobile-price-preview clearfix ">
+    
+    <div class="mobile-price-preview-item">
+      <span class="mobile-price-kind">月卡</span>
+      <div class="mobile-price-img">
+        <img src="./images/crown1-mobile.png"/>
+      </div>
+      <div class="mobile-price-kind">每日两小时</div>
+      <div class="mobile-price-count">¥75</div>
+      <div class="mobile-price-buy">立即抢购</div>
+    </div>
+    <div class="mobile-price-preview-item">
+      <span class="mobile-price-kind">月卡</span>
+      <div class="mobile-price-img">
+        <img src="./images/crown2-mobile.png"/>
+      </div>
+      <div class="mobile-price-kind">每日两小时</div>
+      <div class="mobile-price-count">¥75</div>
+      <div class="mobile-price-buy">立即抢购</div>
+    </div>
+    <div class="mobile-price-preview-item">
+      <span class="mobile-price-kind">月卡</span>
+      <div class="mobile-price-img">
+        <img src="./images/crown2-mobile.png"/>
+      </div>
+      <div class="mobile-price-kind">每日两小时</div>
+      <div class="mobile-price-count">¥75</div>
+      <div class="mobile-price-buy">立即抢购</div>
+    </div>
+    <div class="mobile-price-preview-item">
+      <span class="mobile-price-kind">月卡</span>
+      <div class="mobile-price-img">
+        <img src="./images/crown2-mobile.png"/>
+      </div>
+      <div class="mobile-price-kind">每日两小时</div>
+      <div class="mobile-price-count">¥75</div>
+      <div class="mobile-price-buy">立即抢购</div>
+    </div>
+
+  </div>
+  <!-- 手机端价格结束 --> 
 
   <!-- 页脚底部开始 -->
   <div class="footer-top">
@@ -200,5 +291,50 @@
     </div>
   </div>
   <!-- 页脚底部结束 -->
+
+  <!-- 手机端底部开始 -->
+  <div class="mobile-footer-wrap">
+    <div class="mobile-footer-item">
+      <div class="mobile-footer-title-text">客户端下载</div>
+      <div>
+        <span class="client-download"><a herf="" class="mobile-footer-con-text mobile-window">Windows版下载</a></span>
+        <span class="client-download"><a class="mobile-footer-con-text" href="">Android版下载</a></span>
+      </div>
+      <div><a href="" class="mobile-footer-con-text">苹果mac版下载</a></div>
+    </div>
+
+    <div class="mobile-footer-item">
+      <div class="mobile-footer-title-text">官方渠道</div>
+      <div class="footer-code-item">
+        <img src="./images/qrcode-wechat.png"/>
+        <div>微信公众号</div>
+      </div>
+      <div class="footer-code-item">
+        <img src="./images/qrcode-douyin.png"/>
+        <div>抖音官方号</div>
+      </div>
+    </div>
+
+    <div class="mobile-footer-item">
+      <div class="mobile-footer-title-text">友情链接</div>
+      <div>
+        <a href="" class="friend-link mobile-footer-con-text">顺网科技</a>
+        <a href="" class="friend-link mobile-footer-con-text">顺网算力</a>
+        <a href="" class="friend-link mobile-footer-con-text">泡泡加速器</a>
+      </div>
+    </div>
+
+    <div class="mobile-footer-item">
+      <div class="mobile-footer-title-text">关于我们</div>
+      <div>
+        <a href="" class="about-us mobile-footer-con-text">关于我们</a>
+        <a href="" class="about-us mobile-footer-con-text">隐私政策</a>
+        <a href="" class="about-us mobile-footer-con-text">用户协议</a>
+        <a href="" class="about-us mobile-footer-con-text">使用教程</a>
+      </div>
+    </div>
+    
+  </div>
+  <!-- 手机端底部结束 -->
 </body>
 </html>
