--- a/price.html
+++ b/price.html
@@ -6,6 +6,7 @@
   <title>价格</title>
   <link rel="stylesheet" href="./common.css" />
   <link rel="stylesheet" href="./price.css" />
+  <link rel="stylesheet" href="./fonts/iconfont.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
 <body>
@@ -19,11 +20,11 @@
          <li><a class="a-active" href="./price.html">价格</a></li>
        </ul>
      </div>
-     <span class="header-download">下载客户端</span>
+     <span class="header-download"><i class="iconfont icon-Vector1"></i>下载客户端</span>
     </div>
   </div>
  <!-- 头部导航结束 -->
-
+ 
   <!-- 手机端头部导航开始 -->
   <div class="mobile-header">
     <div class="mobile-header-left">
@@ -36,11 +37,14 @@
   </div>
   <!-- 手机端头部导航结束 -->
 
+  
   <div class="price-con-wrap">
     <div class="module-divider-common-price mobile-module-divider-common">
-      <span>
+      <img  src="./images/divier-left.png"/>
+      <span class="divider-content-text">
         高性价比 + 多种选择
       </span>
+      <img src="./images/divider-right.png"/>
     </div> 
 
     <!-- pc端价格开始 -->
