页面底部等样式优化

--- a/index.html
+++ b/index.html
@@ -237,33 +237,43 @@
       <div class="footer-item"> 
         <div class="footer-item-title">客戶端下载</div>
         <div class="footer-item-line">
-          <span class="footer-item-lineleft">Windows版下载</span>
-          <span>Android版下载</span>
+          <span class="footer-item-lineleft footer-item-text">
+            <i class="iconfont icon-Vector1"></i>Windows版下载
+          </span>
+          <span class="footer-item-text"><i class="iconfont icon-Frame61"></i>Android版下载</span>
         </div>
         <div>
-          <span>苹果mac版下载</span>
+          <span class="footer-item-text"><i class="iconfont icon-Frame41"></i>苹果mac版下载</span>
         </div>
       </div>
 
       <div class="footer-item">
         <div class="footer-item-title">官方渠道</div>
-        <div class="footer-item-line">微信</div>
-        <div class="footer-item-line">抖音</div>
+        <div class="footer-item-line footer-item-text"><i class="iconfont icon-Frame11"></i>微信</div>
+        <div class="footer-item-line footer-item-text"><i class="iconfont icon-Frame21"></i>抖音</div>
       </div>
 
       <div class="footer-item">
         <div class="footer-item-title">友情链接</div>
-        <div class="footer-item-line"><a href="https://www.shunwang.com/?from=icloudpc" target="_blank">顺网科技</a></div>
-        <div class="footer-item-line"><a href="https://scc.icloud.cn" target="_blank">顺网算力</a></div>
-        <div class="footer-item-line"><a href="" target="_blank">泡泡加速器</a></div>
+        <div class="footer-item-line"><a href="https://www.shunwang.com/?from=icloudpc" target="_blank">
+          <!-- <i class="iconfont icon-a-Group13772"></i> -->
+          <img src="./images/shunwang.png"/>
+        </a>
+        </div>
+        <div class="footer-item-line"><a href="https://scc.icloud.cn" target="_blank">
+         <img src="./images/market.png"/>
+        </a></div>
+        <div class="footer-item-line"><a href="https://www.lianwuyu.com/?from=icloudpc" target="_blank">
+          <img src="./images/paopao.png"/>
+        </a></div>
       </div>
 
       <div class="footer-item">
         <div class="footer-item-title">关于我们</div>
-        <div class="footer-item-line">关于我们</div>
-        <div class="footer-item-line">隐私政策</div>
-        <div class="footer-item-line">用户协议</div>
-        <div class="footer-item-line">使用教程</div>
+        <div class="footer-item-line footer-item-text"><a href="https://www.icloud.cn/about.html" target="_blank">关于我们</a></div>
+        <div class="footer-item-line footer-item-text"><a href="https://passport.kedou.com/front/common/policy.htm" target="_blank">隐私政策</a></div>
+        <div class="footer-item-line footer-item-text"><a href="https://passport.kedou.com/front/noLogin/agreeMent.htm" target="_blank">用户协议</a></div>
+        <div class="footer-item-line footer-item-text"><a href="https://support.qq.com/products/119284/faqs-more/#classifyId=40503" target="_blank">使用教程</a></div>
       </div>
 
       <div class="footer-logo">
@@ -334,10 +344,10 @@
     <div class="mobile-footer-item">
       <div class="mobile-footer-title-text">关于我们</div>
       <div>
-        <a href="" class="about-us mobile-footer-con-text">关于我们</a>
-        <a href="" class="about-us mobile-footer-con-text">隐私政策</a>
-        <a href="" class="about-us mobile-footer-con-text">用户协议</a>
-        <a href="" class="about-us mobile-footer-con-text">使用教程</a>
+        <a href="https://www.icloud.cn/about.html" target="_blank" class="about-us mobile-footer-con-text">关于我们</a>
+        <a href="https://passport.kedou.com/front/common/policy.htm" target="_blank" class="about-us mobile-footer-con-text">隐私政策</a>
+        <a href="https://passport.kedou.com/front/noLogin/agreeMent.htm" target="_blank" class="about-us mobile-footer-con-text">用户协议</a>
+        <a href="https://support.qq.com/products/119284/faqs-more/#classifyId=40503" target="_blank" class="about-us mobile-footer-con-text">使用教程</a>
       </div>
     </div>
     
