--- a/price.html
+++ b/price.html
@@ -62,9 +62,11 @@
           <img src="./images/crown2.png"/>
           <div class="price-line"><span class="money-count">¥72</span>/月</div>
           <div class="origin-price">90元/月</div>
-          <div class="price-text">每日两小时</div>
-          <div class="price-text">多端共享</div>
-          <div class="price-text">任何时段</div>
+          <div class="price-explain">
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>每日两小时</div>
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>多端共享</div>
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>任何时段</div>
+          </div>
         </div>
         <div class="price-item">
           <span class="price-hour">1.2元/时</span>
@@ -72,9 +74,11 @@
           <img src="./images/crown2.png"/>
           <div class="price-line"><span class="money-count">¥72</span>/月</div>
           <div class="origin-price">90元/月</div>
-          <div class="price-text">每日两小时</div>
-          <div class="price-text">多端共享</div>
-          <div class="price-text">任何时段</div>
+          <div class="price-explain">
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>每日两小时</div>
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>多端共享</div>
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>任何时段</div>
+          </div>
         </div>
         <div class="price-item">
           <span class="price-hour">1.2元/时</span>
@@ -82,9 +86,11 @@
           <img src="./images/crown2.png"/>
           <div class="price-line"><span class="money-count">¥72</span>/月</div>
           <div class="origin-price">90元/月</div>
-          <div class="price-text">每日两小时</div>
-          <div class="price-text">多端共享</div>
-          <div class="price-text">任何时段</div>
+          <div class="price-explain">
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>每日两小时</div>
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>多端共享</div>
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>任何时段</div>
+          </div>
         </div>
         <div class="price-item">
           <span class="price-hour">1.2元/时</span>
@@ -92,9 +98,11 @@
           <img src="./images/crown2.png"/>
           <div class="price-line"><span class="money-count">¥72</span>/月</div>
           <div class="origin-price">90元/月</div>
-          <div class="price-text">每日两小时</div>
-          <div class="price-text">多端共享</div>
-          <div class="price-text">任何时段</div>
+          <div class="price-explain">
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>每日两小时</div>
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>多端共享</div>
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>任何时段</div>
+          </div>
         </div>
         <div class="price-item">
           <span class="price-hour">1.2元/时</span>
@@ -102,9 +110,11 @@
           <img src="./images/crown2.png"/>
           <div class="price-line"><span class="money-count">¥72</span>/月</div>
           <div class="origin-price">90元/月</div>
-          <div class="price-text">每日两小时</div>
-          <div class="price-text">多端共享</div>
-          <div class="price-text">任何时段</div>
+          <div class="price-explain">
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>每日两小时</div>
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>多端共享</div>
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>任何时段</div>
+          </div>
         </div>
         <div class="price-item">
           <span class="price-hour">1.2元/时</span>
@@ -112,9 +122,11 @@
           <img src="./images/crown2.png"/>
           <div class="price-line"><span class="money-count">¥72</span>/月</div>
           <div class="origin-price">90元/月</div>
-          <div class="price-text">每日两小时</div>
-          <div class="price-text">多端共享</div>
-          <div class="price-text">任何时段</div>
+          <div class="price-explain">
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>每日两小时</div>
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>多端共享</div>
+            <div class="price-text"><i class="iconfont icon-Frame71"></i>任何时段</div>
+          </div>
         </div>
       </div>
     </div>
@@ -278,39 +290,49 @@
     <!-- 移动端价格结束 -->
   </div>
 
-  <!-- 页脚底部开始 -->
-  <div class="footer-top">
+   <!-- 页脚底部开始 -->
+   <div class="footer-top">
     <div class="footer-content footer-top-content">
       <div class="footer-item"> 
         <div class="footer-item-title">客戶端下载</div>
         <div class="footer-item-line">
-          <span class="footer-item-lineleft">Windows版下载</span>
-          <span>Android版下载</span>
+          <span class="footer-item-lineleft footer-item-text">
+            <i class="iconfont icon-Vector1"></i>Windows版下载
+          </span>
+          <span class="footer-item-text"><i class="iconfont icon-Frame61"></i>Android版下载</span>
         </div>
         <div>
-          <span>苹果mac版下载</span>
+          <span class="footer-item-text"><i class="iconfont icon-Frame41"></i>苹果mac版下载</span>
         </div>
       </div>
 
       <div class="footer-item">
         <div class="footer-item-title">官方渠道</div>
-        <div class="footer-item-line">微信</div>
-        <div class="footer-item-line">抖音</div>
+        <div class="footer-item-line footer-item-text"><i class="iconfont icon-Frame11"></i>微信</div>
+        <div class="footer-item-line footer-item-text"><i class="iconfont icon-Frame21"></i>抖音</div>
       </div>
 
       <div class="footer-item">
         <div class="footer-item-title">友情链接</div>
-        <div class="footer-item-line"><a href="https://www.shunwang.com/?from=icloudpc" target="_blank">顺网科技</a></div>
-        <div class="footer-item-line"><a href="https://scc.icloud.cn" target="_blank">顺网算力</a></div>
-        <div class="footer-item-line"><a href="" target="_blank">泡泡加速器</a></div>
+        <div class="footer-item-line"><a href="https://www.shunwang.com/?from=icloudpc" target="_blank">
+          <!-- <i class="iconfont icon-a-Group13772"></i> -->
+          <img src="./images/shunwang.png"/>
+        </a>
+        </div>
+        <div class="footer-item-line"><a href="https://scc.icloud.cn" target="_blank">
+         <img src="./images/market.png"/>
+        </a></div>
+        <div class="footer-item-line"><a href="https://www.lianwuyu.com/?from=icloudpc" target="_blank">
+          <img src="./images/paopao.png"/>
+        </a></div>
       </div>
 
       <div class="footer-item">
         <div class="footer-item-title">关于我们</div>
-        <div class="footer-item-line">关于我们</div>
-        <div class="footer-item-line">隐私政策</div>
-        <div class="footer-item-line">用户协议</div>
-        <div class="footer-item-line">使用教程</div>
+        <div class="footer-item-line footer-item-text"><a href="https://www.icloud.cn/about.html" target="_blank">关于我们</a></div>
+        <div class="footer-item-line footer-item-text"><a href="https://passport.kedou.com/front/common/policy.htm" target="_blank">隐私政策</a></div>
+        <div class="footer-item-line footer-item-text"><a href="https://passport.kedou.com/front/noLogin/agreeMent.htm" target="_blank">用户协议</a></div>
+        <div class="footer-item-line footer-item-text"><a href="https://support.qq.com/products/119284/faqs-more/#classifyId=40503" target="_blank">使用教程</a></div>
       </div>
 
       <div class="footer-logo">
