--- a/price.html
+++ b/price.html
@@ -416,7 +416,7 @@
    <!-- 手机端蒙板开始 -->
   <div class="mobile-more-menu-mask">
     <div class="mobile-more-menu">
-      <div class="btn-close" onclick="handleDisMoreMenu()">叉叉</div>
+      <div class="btn-close" onclick="handleDisMoreMenu()"><i class="iconfont icon-a-Maskgroup"></i></div>
       <div class="mobile-more-nav"><a href="./index.html">首页</a></div>
       <div class="mobile-more-nav"><a href="./price.html">价格</a></div>
     </div>
