--- a/price.html
+++ b/price.html
@@ -434,6 +434,37 @@
   </div>
   <!-- 手机端蒙板结束 -->
 
+  <!-- 侧边栏客服开始 -->
+  <div class="pc-sidebar">
+    <div class="services" onclick="handleOnline()">
+      <i class="iconfont icon-Frame3"></i>
+      <span class="services-link">在线客服</span>
+    </div>
+    <div class="goto-top" onclick="gotoTop()">
+      <i class="iconfont icon-arrow-left"></i>
+      <div>返回顶部</div>
+    </div>
+  </div>
+  <!-- 侧边栏客服结束 -->
+
+  <!-- 弹框联系客服输入手机号开始 -->
+  <div class="online-mobile-wrap">
+    <div class="online-mobile-download-mask common-mask" onclick="handleMobileMask(event)"></div>
+    <div class="online-mobile-content-wrap">
+      <div class="online-mobile-title">
+        登录在线客服系统
+        <i class="iconfont icon-a-Maskgroup pull-right online-mobile-close-icon" onclick="handleCloseMobileMask()"></i>
+      </div>
+      <div class="online-mobile-content">
+        <div class="online-mobile-info">请输入您的手机号码，系统将关联您登记过的信息，以便我们高校的为您服务</div>
+        <div class="online-mobile-info-input"><input placeholder="请输入手机号" type="text" id="mobileInput"/></div>
+        <div class="online-mobile-error" id="mobileError">手机号码格式错误</div>
+        <div class="online-button" onclick="handleConsult()">立即咨询</div>
+      </div>
+    </div>
+  </div>
+  <!-- 弹框联系客服输入手机号结束 -->
+
 </body>
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -493,4 +524,5 @@
       swiper.slideTo(index); // 切换到指定索引的slide
     }
 </script>
+<script type="text/javascript" src="./common.js"></script>
 </html> 
