1、查看更多游戏弹框，增加右上角叉叉按钮； 2、样式调整

--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
     <div class="more-game-download-mask common-mask" onclick="handleMaskClick(event)"></div>
     <div class="more-game-download">
        <div class="more-game-download-right">
+        <span class="more-game-download-close" onclick="closePopup()"><i class="iconfont icon-a-Maskgroup"></i></span>
         <div class="more-game-download-title">下载客户端，即可搜索更多游戏！！</div>
         <div class="more-game-pc-download">
           <div class="more-game-mac-download"><i class="iconfont icon-Frame41"></i>苹果MAC版下载</div>
