--- a/price.html
+++ b/price.html
@@ -451,8 +451,8 @@
   <div class="mobile-more-menu-mask">
     <div class="mobile-more-menu">
       <div class="btn-close" onclick="handleDisMoreMenu()"><i class="iconfont icon-a-Maskgroup"></i></div>
-      <div class="mobile-more-nav"><a href="./index.html">首页</a></div>
-      <div class="mobile-more-nav"><a href="./price.html">价格</a></div>
+      <a href="./index.html"><div class="mobile-more-nav">首页</div></a>
+      <a href="./price.html"><div class="mobile-more-nav">价格</div></a>
     </div>
   </div>
   <!-- 手机端蒙板结束 -->
