手机端二维码图片对齐；背景图适配大屏

--- a/price.html
+++ b/price.html
@@ -420,7 +420,7 @@
         <div>微信公众号</div>
       </div>
       <div class="footer-code-item">
-        <img src="./images/qrcode-douyin.png"/>
+        <img src="./images/qrcode-douyin-mobile.png"/>
         <div>抖音官方号</div>
       </div>
     </div>
